--- a/AndroidGame/AndroidGame.csproj
+++ b/AndroidGame/AndroidGame.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Classes\Geometry\Functions.cs" />
     <Compile Include="Classes\Geometry\Polygon.cs" />
     <Compile Include="Classes\Geometry\Shape.cs" />
+    <Compile Include="Classes\Physics\Body.cs" />
+    <Compile Include="Classes\Physics\PhysicalType.cs" />
+    <Compile Include="Classes\Physics\PhysicsController.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
