--- a/AndroidGame/AndroidGame.csproj
+++ b/AndroidGame/AndroidGame.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Classes\Physics\Body.cs" />
     <Compile Include="Classes\Physics\PhysicalType.cs" />
     <Compile Include="Classes\Physics\PhysicsController.cs" />
+    <Compile Include="Classes\Serialization\GunInfo.cs" />
+    <Compile Include="Classes\Serialization\ISerializationInfo.cs" />
+    <Compile Include="Classes\Serialization\ProjectileInfo.cs" />
+    <Compile Include="Classes\Serialization\SerializationManager.cs" />
+    <Compile Include="Classes\Serialization\ShipInfo.cs" />
+    <Compile Include="Classes\Serialization\ShipPartInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -88,7 +94,6 @@
     <AndroidResource Include="Resources\Drawable\Icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\Serialization\" />
     <Folder Include="Resources\Layout\" />
   </ItemGroup>
   <ItemGroup>
