--- a/AndroidGame/AndroidGame.csproj
+++ b/AndroidGame/AndroidGame.csproj
@@ -105,6 +105,7 @@
     <AndroidResource Include="Resources\Drawable\Icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Content\Sprites\Joystick\" />
     <Folder Include="Resources\Layout\" />
   </ItemGroup>
   <ItemGroup>
