--- a/AndroidGame/AndroidGame.csproj
+++ b/AndroidGame/AndroidGame.csproj
@@ -60,12 +60,14 @@
   <ItemGroup>
     <Compile Include="Classes\Base\Activity.cs" />
     <Compile Include="Classes\Base\AndroidGame.cs" />
+    <Compile Include="Classes\Controllers\GameController.cs" />
     <Compile Include="Classes\Controllers\GUIController.cs" />
     <Compile Include="Classes\Controllers\IController.cs" />
     <Compile Include="Classes\Controllers\LootController.cs" />
     <Compile Include="Classes\Controllers\ProjectilesController.cs" />
     <Compile Include="Classes\Controllers\ShipsController.cs" />
     <Compile Include="Classes\GameObjects\Base\Drawable.cs" />
+    <Compile Include="Classes\GameObjects\Base\IPhysicalObject.cs" />
     <Compile Include="Classes\GameObjects\Base\PhysicalObject.cs" />
     <Compile Include="Classes\GameObjects\Base\PhysicalObjectAcc.cs" />
     <Compile Include="Classes\GameObjects\Base\PhysicalObjectsTypes.cs" />
@@ -73,8 +75,8 @@
     <Compile Include="Classes\GameObjects\Projectile.cs" />
     <Compile Include="Classes\GameObjects\Ships\AIShip.cs" />
     <Compile Include="Classes\GameObjects\Ships\Gun.cs" />
+    <Compile Include="Classes\GameObjects\Ships\PlayerShip.cs" />
     <Compile Include="Classes\GameObjects\Ships\Ship.cs" />
-    <Compile Include="Classes\GameObjects\Ships\ShipPart.cs" />
     <Compile Include="Classes\Geometry\Circle.cs" />
     <Compile Include="Classes\Geometry\Functions.cs" />
     <Compile Include="Classes\Geometry\Polygon.cs" />
@@ -83,14 +85,15 @@
     <Compile Include="Classes\GUI\Camera.cs" />
     <Compile Include="Classes\GUI\Joystick.cs" />
     <Compile Include="Classes\Physics\Body.cs" />
+    <Compile Include="Classes\Physics\CollisionChecker.cs" />
     <Compile Include="Classes\Physics\PhysicalType.cs" />
     <Compile Include="Classes\Physics\PhysicsController.cs" />
+    <Compile Include="Classes\Serialization\BodyInfo.cs" />
     <Compile Include="Classes\Serialization\GunInfo.cs" />
     <Compile Include="Classes\Serialization\ISerializationInfo.cs" />
     <Compile Include="Classes\Serialization\ProjectileInfo.cs" />
     <Compile Include="Classes\Serialization\SerializationManager.cs" />
     <Compile Include="Classes\Serialization\ShipInfo.cs" />
-    <Compile Include="Classes\Serialization\ShipPartInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -105,7 +108,6 @@
     <AndroidResource Include="Resources\Drawable\Icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Content\Sprites\Joystick\" />
     <Folder Include="Resources\Layout\" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +121,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Content\Info\Projectiles.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAsset>
+    <AndroidAsset Include="Content\Info\Ships.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAsset>
+    <Content Include="Content\Sprites\Joystick\Background.png" />
+    <Content Include="Content\Sprites\Joystick\Foreground.png" />
+    <Content Include="Content\Sprites\Loot\Loot.png" />
+    <Content Include="Content\Sprites\Projectiles\Projectile0.png" />
+    <Content Include="Content\Sprites\Ships\Ship0.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
