Organizing projects structure

--- a/NetworkLib/NetworkLib.csproj
+++ b/NetworkLib/NetworkLib.csproj
@@ -47,10 +47,18 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ShipData.cs" />
+    <Compile Include="Data\CreateShipActionData.cs" />
+    <Compile Include="Data\DataType.cs" />
+    <Compile Include="Data\InitializeData.cs" />
+    <Compile Include="Data\InputData.cs" />
+    <Compile Include="Data\ShipData.cs" />
+    <Compile Include="Data\ShipStateData.cs" />
+    <Compile Include="Data\StructConverter.cs" />
+    <Compile Include="Data\TimeData.cs" />
     <Compile Include="Tcp.cs" />
     <Compile Include="TcpConnector.cs" />
     <Compile Include="Udp.cs" />
+    <Compile Include="ConnectedUdp.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
