--- a/AndroidGame/AndroidGame.csproj
+++ b/AndroidGame/AndroidGame.csproj
@@ -62,43 +62,24 @@
     <Compile Include="Classes\Base\AndroidGame.cs" />
     <Compile Include="Classes\Controllers\GameController.cs" />
     <Compile Include="Classes\Controllers\GUIController.cs" />
-    <Compile Include="Classes\Controllers\IController.cs" />
+    <Compile Include="Classes\Controllers\IDrawablesController.cs" />
     <Compile Include="Classes\Controllers\LootController.cs" />
     <Compile Include="Classes\Controllers\ParticleSystem.cs" />
     <Compile Include="Classes\Controllers\ProjectilesController.cs" />
     <Compile Include="Classes\Controllers\ShipsController.cs" />
     <Compile Include="Classes\GameObjects\Base\Drawable.cs" />
-    <Compile Include="Classes\GameObjects\Base\PhysicalObjectsType.cs" />
-    <Compile Include="Classes\GameObjects\Ships\BaseShip.cs" />
-    <Compile Include="Classes\GameObjects\Ships\Gun.cs" />
-    <Compile Include="Classes\GameObjects\Base\IPhysicalObject.cs" />
-    <Compile Include="Classes\GameObjects\Base\PhysicalObject.cs" />
-    <Compile Include="Classes\GameObjects\Base\PhysicalObjectAcc.cs" />
-    <Compile Include="Classes\GameObjects\Ships\Ship.cs" />
     <Compile Include="Classes\GameObjects\Loot.cs" />
     <Compile Include="Classes\GameObjects\ParticleSpawner.cs" />
     <Compile Include="Classes\GameObjects\Projectile.cs" />
     <Compile Include="Classes\GameObjects\Ships\AIShip.cs" />
+    <Compile Include="Classes\GameObjects\Ships\EnemyPlayerShip.cs" />
     <Compile Include="Classes\GameObjects\Ships\PlayerShip.cs" />
-    <Compile Include="Classes\Geometry\Circle.cs" />
-    <Compile Include="Classes\Geometry\Functions.cs" />
-    <Compile Include="Classes\Geometry\Polygon.cs" />
-    <Compile Include="Classes\Geometry\Shape.cs" />
+    <Compile Include="Classes\GameObjects\Ships\Ship.cs" />
     <Compile Include="Classes\GUI\Button.cs" />
     <Compile Include="Classes\GUI\Camera.cs" />
     <Compile Include="Classes\GUI\Joystick.cs" />
-    <Compile Include="Classes\Physics\Body.cs" />
-    <Compile Include="Classes\Physics\CollisionChecker.cs" />
-    <Compile Include="Classes\Physics\PhysicalType.cs" />
-    <Compile Include="Classes\Physics\PhysicsController.cs" />
-    <Compile Include="Classes\Serialization\BodyInfo.cs" />
-    <Compile Include="Classes\Serialization\GunInfo.cs" />
-    <Compile Include="Classes\Serialization\ISerializationInfo.cs" />
-    <Compile Include="Classes\Serialization\ParticleSpawnerInfo.cs" />
-    <Compile Include="Classes\Serialization\ProjectileInfo.cs" />
-    <Compile Include="Classes\Serialization\SerializationManager.cs" />
-    <Compile Include="Classes\Serialization\ShipInfo.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Classes\Net\NetController.cs" />
+    <Compile Include="Classes\Net\Sender.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -128,14 +109,6 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Content\Info\Projectiles.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </AndroidAsset>
-    <AndroidAsset Include="Content\Info\Ships.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </AndroidAsset>
     <Content Include="Content\Shaders\ParticleShader.fx" />
     <Content Include="Content\Sprites\Joystick\Background.png" />
     <Content Include="Content\Sprites\Joystick\Foreground.png" />
@@ -147,6 +120,10 @@
     <Content Include="Content\Sprites\Ships\Ship3.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GameLib\GameLib.csproj">
+      <Project>{019a481e-1962-4acf-8869-1a27a5eb266b}</Project>
+      <Name>GameLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NetworkLib\NetworkLib.csproj">
       <Project>{05f6bbd0-6dbc-4c80-9600-e4012cde6ef6}</Project>
       <Name>NetworkLib</Name>
