--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -43,20 +43,17 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Player.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerShip.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AndroidGame\AndroidGame.csproj">
-      <Project>{d9ffe341-941c-4141-ace2-ee83f16140a1}</Project>
-      <Name>AndroidGame</Name>
+    <ProjectReference Include="..\GameLib\GameLib.csproj">
+      <Project>{019a481e-1962-4acf-8869-1a27a5eb266b}</Project>
+      <Name>GameLib</Name>
     </ProjectReference>
     <ProjectReference Include="..\NetworkLib\NetworkLib.csproj">
       <Project>{05f6bbd0-6dbc-4c80-9600-e4012cde6ef6}</Project>
@@ -64,7 +61,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Content\Info\Ships.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Content\Info\Projectiles.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAsset>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
